[project]
name = "wrongpencil"
dynamic = ["version"]
description = "Experinments on Diffusion Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.10.7",
    "grain>=0.2.13",
    "opencv-python-headless>=4.13.0.92",
    "optax>=0.2.6",
    "tensorflow-datasets>=4.9.9",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "uv>=0.4.20",
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "pytest-anyio>=0.0.0",
    "trio>=0.31.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-panzoom-plugin",
    "jupyter>=1.1.1",
]
build = [
    "twine>=5.1.1",
    "wheel>=0.40",
    "build>=0.10"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["wrongpencil"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["wrongpencil"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
